# manga2english-yolo-aoai

./: README.md  pyproject.toml  translate_manga_into_english.py
